[package]
name = "ember-analysis"
version = "0.1.0"
description = "Ember Analysis"
authors = ["You"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "fs-read-file"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OpenAI HTTP client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
sha2 = "0.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
